--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ body {
 
 header {
     background-color: #333; /* Dark gray background */
-    color: #ffff; /* Yellow text */
+    color: #fff; /* Yellow text */
     padding: 2rem;
     text-align: center;
     width: 100%;
